# docs/swagger.yaml
@@ -29,9 +29,9 @@ definitions:
     type: object
   models.Publish:
     properties:
+      clientIdSession:
+        type: string
       id:
-        type: integer
-      idSession:
         type: integer
       payload:
         type: string
@@ -47,8 +47,8 @@ definitions:
     type: object
   models.PublishRequest:
     properties:
-      idSession:
-        type: integer
+      clientIdSession:
+        type: string
       payload:
         type: string
       qos:
@@ -61,6 +61,8 @@ definitions:
     type: object
   models.PublishResponse:
     properties:
+      clientIdSession:
+        type: string
       id:
         type: integer
       numberTimestamp:
